# torch

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  image_processor.cpp  main.cpp  mesh_solver_test.cpp  optim.cpp  pose_processor.cpp  scene.xml  voxel_demo.cpp
apps/albedo_baker/: CMakeLists.txt  albedo_baker.cpp
apps/solver/: CMakeLists.txt  albedo_solver.cpp  mesh_solver.cpp  solver.cpp  voxel_solver.cpp
cmake/: FindAssimp.cmake  FindOptiX.cmake  FindTinyXML2.cmake
include/torch/: ActivationCostFunction.h  AlbedoBaker.h  AlbedoCostFunction.h  AlbedoResidualBlock.h  AreaLight.h  AreaLightSampler.h  BoundingBox.h  Camera.h  Context.h  Core.h  DarkenCostFunction.h  DirectionalLight.h  DirectionalLightSampler.h  DistantLight.h  DistantLightSampler.h  Distribution.h  Distribution1D.h  Distribution2D.h  EnvironmentLight.h  EnvironmentLightSampler.h  Exception.h  Geometry.cuh  Geometry.h  GeometryData.h  GeometryGroup.h  GeometryGroupSampler.h  GeometrySampler.h  Group.h  Image.h  Keyframe.h  KeyframeSet.h  Light.h  LightCostFunction.h  LightData.h  LightSampler.h  Link.h  Material.h  MaterialLoader.h  MatteMaterial.h  Mesh.h  (+37 more)
include/torch/device/: ActivationCostFunction.cuh  Camera.h  Core.h  DarkenCostFunction.cuh  Geometry.h  GeometryData.h  Light.h  LightCostFunction.cuh  MeshCostKernel.cuh  Random.h  Ray.h  ReflectanceCostFunction.cuh  Sampling.h  Transform.h  Visibility.h
src/: ActivationCostFunction.cpp  ActivationCostFunction.cu  AlbedoBaker.cpp  AlbedoBaker.cu  AlbedoCostFunction.cpp  AlbedoCostFunction.cu  AlbedoResidualBlock.cpp  AlbedoResidualBlock.cu  AreaLight.cpp  AreaLightSampler.cpp  AreaLightSampler.cu  BoundingBox.cpp  Camera.cpp  Camera.cu  Context.cpp  Context.cu  DarkenCostFunction.cpp  DarkenCostFunction.cu  DirectionalLight.cpp  DirectionalLightSampler.cpp  DirectionalLightSampler.cu  DistantLight.cpp  DistantLightSampler.cpp  DistantLightSampler.cu  Distribution.cpp  Distribution.cu  Distribution1D.cpp  Distribution1D.cu  Distribution2D.cpp  Distribution2D.cu  EnvironmentLight.cpp  EnvironmentLightSampler.cpp  EnvironmentLightSampler.cu  Exception.cpp  Exception.cu  Geometry.cpp  GeometryGroup.cpp  GeometryGroupSampler.cpp  GeometryGroupSampler.cu  GeometrySampler.cpp  (+64 more)
tests/: ActivationCostFunction.cpp  AlbedoCostFunction.cpp  CMakeLists.txt  DarkenCostFunction.cpp  Distribution1D.cpp  Distribution1D.cu  Distribution2D.cpp  Distribution2D.cu  LightCostFunction.cpp  MeshCostFunction.cpp  MeshWriter.cpp  Node.cpp  NodeTest.cpp  Octree.cpp  Problem.cpp  ReflectanceCostFunction.cpp  Sampling.cpp  ShadowRemover.cpp  TestPtxUtil.h.in  Transform.cpp  TransformTest.cpp  VoxelCostFunction.cpp
